# y2kexplorer

./: .gitignore  Cargo.toml  README.md  README_RU.md  config.example.toml  docker-compose.yml  justfile
.assets/: demo.cast
.cargo/: config.toml
.cursor/: settings.json
.github/: dependabot.yml  release-notes-template.md
.github/workflows/: ci.yml  release.yml
docker/: init-kafka.sh  init-schemas.sh
docker/connect/: Dockerfile  file-sink.json  file-source.json  generate-events.sh  init-connect.sh
docker/connect-data/: events.json  sink.json
docker/sample-messages/: notifications.jsonl  orders.jsonl  payments.jsonl  users.events.jsonl
docker/sasl/: admin.properties  app.properties  broker_jaas.conf
docker/schemas/: orders-value.json  payments.retry-value.json  users.events-value.json
docs/: README.md  README.ru.md
docs/en/: configuration.md  development.md  docker.md  installation.md  keybindings.md  themes.md
docs/ru/: configuration.md  development.md  docker.md  installation.md  keybindings.md  themes.md
src/: labels.rs  lib.rs  main.rs
src/app/: command.rs  mod.rs  modal.rs  worker.rs
src/config/: mod.rs
src/kafka/: acl.rs  client.rs  mod.rs
src/kafka_connect/: mod.rs
src/schema_registry/: mod.rs
src/ui/: mod.rs  payload.rs  splash.rs  theme.rs
src/ui/components/: help.rs  mod.rs  sidebar.rs  status.rs  table.rs
src/views/: acls.rs  connector_detail.rs  connectors.rs  context_list.rs  group_details.rs  groups.rs  label_list.rs  messages.rs  mod.rs  schema_detail.rs  schemas.rs  stack.rs  topics.rs
