[package]
name = "y2kexplorer"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Apache Kafka clusters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/armitageee/y2kexplorer"
homepage = "https://github.com/armitageee/y2kexplorer"

[features]
default = ["gssapi"]
# Kerberos (GSSAPI) — Linux/macOS; на Windows CI собирает `--no-default-features`.
gssapi = ["rdkafka/gssapi"]

[lib]
name = "y2kexplorer"
path = "src/lib.rs"

[[bin]]
name = "y2k"
path = "src/main.rs"

[[bin]]
name = "y2k-probe"
path = "src/bin/probe.rs"

[dependencies]
ratatui = { version = "0.30", default-features = true }
crossterm = "0.29"
rdkafka = { version = "0.39", default-features = false, features = [
    "cmake-build",
    "ssl",
    "sasl",
    "tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
arboard = "3"
ureq = { version = "2.12", features = ["json"] }
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
